--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -122,6 +122,12 @@
             setInterval(fetchLogs, 10000); // Esegui ogni 10 secondi
         });
     </script>
+
+    <script>
+        function confirmDelete() {
+            return confirm("Are you sure you want to delete this item?");
+        }
+    </script>
     
 </body>
 
