--- a/app/templates/datatable_setup.html
+++ b/app/templates/datatable_setup.html
@@ -11,6 +11,7 @@
             "ordering": true,
             "searching": true,
             "info": true,
+            "pageLength": 100,
             "language": {
                 "url": "//cdn.datatables.net/plug-ins/1.13.4/i18n/Italian.json"
             }
