--- a/app/templates/Inventory_codereader.html
+++ b/app/templates/Inventory_codereader.html
@@ -78,9 +78,9 @@
         <div class="row">
             <div class="col-8 text-center mt-3">
                 <div class="btn-group" role="group">
-                    <button class="btn btn-lg btn-outline-success action">IN</button>
-                    <button class="btn btn-lg btn-outline-warning action">WORK</button>
-                    <button class="btn btn-lg btn-outline-danger action">OUT</button>
+                    <button id="action-IN" class="btn btn-lg btn-outline-success action">IN</button>
+                    <button id="action-WORK" class="btn btn-lg btn-outline-warning action">WORK</button>
+                    <button id="action-OUT" class="btn btn-lg btn-outline-danger action">OUT</button>
                 </div>
 
                 <div class="align-items-center">
@@ -92,7 +92,13 @@
                         <div class="col text-start">
                             <span class="mt-2">Product Code: {{ last_item.ProductCode }}</span><br>
                             <span>On hand: {{ last_item.QuantityOnHand }}</span><br>
+                            {% if action=="IN" %}
                             <span class="text-warning">Added: {{ last_added_count }}</span><br><br>
+                            {% elif action == "WORK" %}
+                            <span class="text-warning">in Work: {{ last_added_count }}</span><br><br>
+                            {% elif action == "OUT" %}
+                            <span class="text-warning">Removed: {{ last_added_count }}</span><br><br>
+                            {% endif %}
                             <span class="text-success">Available: {{ last_item.QuantityOnHand -
                                 last_item.Locked}}</span><br>
                             <span class="text-danger">Locked: {{ last_item.Locked }}</span>
@@ -106,30 +112,31 @@
                         <label for="ProductCode" class="text-white">Scan the article:</label>
                         <input type="text" id="ProductCode" name="ProductCode" class="form-control text-center w-100"
                             autofocus required>
+                        <input type="hidden" id="action" name="action">
                     </form>
                 </div>
             </div>
             <div class="col-4 text-center mt-3 keypad">
                 Edit input quantity
                 <div class="d-flex">
-                    <button class="btn btn-secondary">7</button>
-                    <button class="btn btn-secondary">8</button>
-                    <button class="btn btn-secondary">9</button>
+                    <button class="btn btn-secondary" disabled>7</button>
+                    <button class="btn btn-secondary" disabled>8</button>
+                    <button class="btn btn-secondary" disabled>9</button>
                 </div>
                 <div class="d-flex">
-                    <button class="btn btn-secondary">4</button>
-                    <button class="btn btn-secondary">5</button>
-                    <button class="btn btn-secondary">6</button>
+                    <button class="btn btn-secondary" disabled>4</button>
+                    <button class="btn btn-secondary" disabled>5</button>
+                    <button class="btn btn-secondary" disabled>6</button>
                 </div>
                 <div class="d-flex">
-                    <button class="btn btn-secondary">1</button>
-                    <button class="btn btn-secondary">2</button>
-                    <button class="btn btn-secondary">3</button>
+                    <button class="btn btn-secondary" disabled>1</button>
+                    <button class="btn btn-secondary" disabled>2</button>
+                    <button class="btn btn-secondary" disabled>3</button>
                 </div>
                 <div class="d-flex">
-                    <button class="btn btn-danger">&larr;</button>
-                    <button class="btn btn-secondary">0</button>
-                    <button class="btn btn-secondary">SET</button>
+                    <button class="btn btn-danger" disabled>&larr;</button>
+                    <button class="btn btn-secondary" disabled>0</button>
+                    <button class="btn btn-secondary" disabled>SET</button>
                 </div>
             </div>
         </div>
@@ -173,6 +180,7 @@
         startCountdown(); // Avvio automatico
     </script>
     {% endif %}
+
     {% if error %}
     <div id="floatingAlert" class="alert alert-danger alert-floating" role="alert">
         {{ error }}
@@ -187,6 +195,75 @@
         }, 3000);
     </script>
     {% endif %}
+
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let selectedAction = "";
+            const actionButtons = document.querySelectorAll(".action");
+
+            actionButtons.forEach(button => {
+                button.addEventListener("click", function () {
+                    actionButtons.forEach(btn => btn.classList.remove("active"));
+                    this.classList.add("active");
+                    selectedAction = this.textContent;
+                    const hiddenActionInput = document.getElementById("action")
+                    hiddenActionInput.value = selectedAction;
+                });
+            });
+
+            document.querySelector("form").addEventListener("submit", function (e) {
+                if (!selectedAction) {
+                    e.preventDefault();
+                    alert("Please select an action before entering the barcode.");
+                }
+            });
+
+            // Autofocus ogni 200ms
+            setInterval(() => {
+                document.getElementById("ProductCode").focus();
+            }, 200);
+
+            // Tastierino numerico
+            // let quantityInput = "";
+            // const quantityDisplay = document.createElement("span");
+            // quantityDisplay.classList.add("text-warning");
+            // document.querySelector(".text-warning").after(quantityDisplay);
+            // document.querySelectorAll(".keypad button").forEach(button => {
+            //     button.addEventListener("click", function () {
+            //         if (this.textContent === "←") {
+            //             quantityInput = quantityInput.slice(0, -1);
+            //         } else if (this.textContent === "SET") {
+            //             console.log("Set pressed: ", quantityInput);
+            //         } else {
+            //             quantityInput += this.textContent;
+            //         }
+            //         quantityDisplay.textContent = ` ${quantityInput}`;
+            //         resetProgressBar();
+            //     });
+            // });
+
+            // Reset progress bar
+            document.addEventListener("keydown", resetProgressBar);
+
+            function resetProgressBar() {
+                startCountdown();
+            }
+        });
+    </script>
+
+    {% if action %}
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Seleziona il pulsante corretto e simula un click
+            var button = document.getElementById("action-{{ action }}");
+            if (button) {
+                button.click();
+            }
+        });
+    </script>
+    {% endif %}
+
 </body>
 
 </html>
