--- a/app/templates/Inventory_codereader.html
+++ b/app/templates/Inventory_codereader.html
@@ -8,13 +8,14 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         html {
             background-color: purple;
             width: 800px;
             height: 480px;
             overflow: hidden;
+            cursor: none;
         }
 
         body {
@@ -22,6 +23,7 @@
             width: 800px;
             height: 480px;
             overflow: hidden;
+            cursor: none;
         }
 
         .alert-floating {
@@ -59,6 +61,10 @@
 
         .btn-group {
             width: 100%;
+        }
+
+        input{
+            caret-color: transparent;
         }
     </style>
 </head>
@@ -111,7 +117,7 @@
                     <form method="POST" class="d-flex flex-column align-items-center">
                         <label for="ProductCode" class="text-white">Scan the article:</label>
                         <input type="text" id="ProductCode" name="ProductCode" class="form-control text-center w-100"
-                            autofocus required>
+                            autofocus required autocomplete="off">
                         <input type="hidden" id="action" name="action">
                     </form>
                 </div>
@@ -142,6 +148,46 @@
         </div>
     </div>
 
+
+    <script>
+        $(document).ready(function () {
+            let selectedAction = "";
+            const $actionButtons = $(".action");
+
+            $actionButtons.on("click", function () {
+                $actionButtons.removeClass("active");
+                $(this).addClass("active");
+                selectedAction = $(this).text();
+                $("#action").val(selectedAction);
+            });
+
+            $("form").on("submit", function (e) {
+                if (!selectedAction) {
+                    e.preventDefault();
+                    showFloatingAlert("Please select an action before entering the barcode.");
+                    $("#ProductCode").val('');
+                }
+            });
+
+            // Autofocus every 200ms
+            setInterval(() => {
+                $("#ProductCode").focus();
+            }, 200);
+        });
+
+        
+        function showFloatingAlert(message, type = "danger") {
+            const alert = $(`<div class="alert alert-${type} alert-floating" role="alert">${message}</div>`);
+            $("body").append(alert);
+            setTimeout(function () {
+                alert.fadeOut(500, function () {
+                    $(this).remove();
+                });
+            }, 5000);
+        }
+    </script>
+
+
     {% if last_item %}
     <div class="progress m-4">
         <div id="progressBar" class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;">
@@ -150,120 +196,48 @@
     </div>
     <script>
         let interval;
-        let duration = 60; // Tempo in secondi
-        let progressBar = document.getElementById("progressBar");
-        let timeLeftText = document.getElementById("timeLeft");
+        let duration = 60;
 
         function startCountdown() {
-            clearInterval(interval); // Ferma eventuali countdown precedenti
+            clearInterval(interval);
             let timeLeft = duration;
-            progressBar.style.width = "100%";
-            timeLeftText.textContent = timeLeft + "s";
+            $('#progressBar').css('width', '100%');
+            $('#timeLeft').text(timeLeft + "s");
 
             interval = setInterval(() => {
                 timeLeft--;
                 let percentage = (timeLeft / duration) * 100;
-                progressBar.style.width = percentage + "%";
-                timeLeftText.textContent = timeLeft + "s"; // Aggiorna i secondi rimanenti
+                $('#progressBar').css('width', percentage + "%");
+                $('#timeLeft').text(timeLeft + "s");
 
                 if (timeLeft <= 0) {
                     clearInterval(interval);
-                    window.location.href = "/Inventory/codereader"; // Reindirizzamento alla fine
+                    window.location.href = "/Inventory/codereader";
                 }
             }, 1000);
         }
 
-        function resetProgressBar() {
-            startCountdown(); // Riavvia il countdown
-        }
-
-        startCountdown(); // Avvio automatico
+        $(document).ready(function () {
+            startCountdown();
+        });
     </script>
     {% endif %}
 
     {% if error %}
-    <div id="floatingAlert" class="alert alert-danger alert-floating" role="alert">
-        {{ error }}
-    </div>
     <script>
-        setTimeout(function () {
-            let alert = document.getElementById("floatingAlert");
-            if (alert) {
-                alert.style.opacity = "0";
-                setTimeout(() => alert.remove(), 500);
-            }
-        }, 3000);
-    </script>
-    {% endif %}
-
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            let selectedAction = "";
-            const actionButtons = document.querySelectorAll(".action");
-
-            actionButtons.forEach(button => {
-                button.addEventListener("click", function () {
-                    actionButtons.forEach(btn => btn.classList.remove("active"));
-                    this.classList.add("active");
-                    selectedAction = this.textContent;
-                    const hiddenActionInput = document.getElementById("action")
-                    hiddenActionInput.value = selectedAction;
-                });
-            });
-
-            document.querySelector("form").addEventListener("submit", function (e) {
-                if (!selectedAction) {
-                    e.preventDefault();
-                    alert("Please select an action before entering the barcode.");
-                }
-            });
-
-            // Autofocus ogni 200ms
-            setInterval(() => {
-                document.getElementById("ProductCode").focus();
-            }, 200);
-
-            // Tastierino numerico
-            // let quantityInput = "";
-            // const quantityDisplay = document.createElement("span");
-            // quantityDisplay.classList.add("text-warning");
-            // document.querySelector(".text-warning").after(quantityDisplay);
-            // document.querySelectorAll(".keypad button").forEach(button => {
-            //     button.addEventListener("click", function () {
-            //         if (this.textContent === "←") {
-            //             quantityInput = quantityInput.slice(0, -1);
-            //         } else if (this.textContent === "SET") {
-            //             console.log("Set pressed: ", quantityInput);
-            //         } else {
-            //             quantityInput += this.textContent;
-            //         }
-            //         quantityDisplay.textContent = ` ${quantityInput}`;
-            //         resetProgressBar();
-            //     });
-            // });
-
-            // Reset progress bar
-            document.addEventListener("keydown", resetProgressBar);
-
-            function resetProgressBar() {
-                startCountdown();
-            }
+        $(document).ready(function () {
+            showFloatingAlert("{{ error }}");
         });
     </script>
+    {% endif %}
 
     {% if action %}
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            // Seleziona il pulsante corretto e simula un click
-            var button = document.getElementById("action-{{ action }}");
-            if (button) {
-                button.click();
-            }
+        $(document).ready(function () {
+            $("#action-{{ action }}").trigger("click");
         });
     </script>
     {% endif %}
-
 </body>
 
 </html>
