--- a/app/templates/ProductionOrderprogress.html
+++ b/app/templates/ProductionOrderprogress.html
@@ -29,6 +29,7 @@
             <p>Order date: {{ order["OrderDate"] }}</p>
             <p>Quantity: {{ order["QuantityCompleted"] }}/{{ order["Quantity"] }}</p>
             <p>Status: {{ order["Status"] }}</p>
+            <p>Assigned to: {{ order["AssignedUser"] }}</p>
         </div>
     </div>
 </div>
