--- a/app/templates/ProductionOrder_add.html
+++ b/app/templates/ProductionOrder_add.html
@@ -8,6 +8,7 @@
                 <label for="date" class="form-label">Order Date:</label>
                 <input type="date" id="date" name="OrderDate" value="{{ OrderDate }}" class="form-control" required>
             </div>
+            
             <div class="mb-3">
                 <label for="code" class="form-label">Product Code:</label>
                 <select id="code" name="ProductCode" class="form-select" required>
@@ -19,10 +20,22 @@
                     {% endfor %}
                 </select>
             </div>            
+            
             <div class="mb-3">
                 <label for="quantity" class="form-label">Quantity:</label>
                 <input type="number" id="quantity" name="Quantity" value="{{ Quantity }}" min="1" class="form-control" required>
             </div>
+
+            <div class="mb-3">
+                <label for="AssignedUser" class="form-label">Assigned User:</label>
+                <select id="AssignedUser" name="AssignedUser" class="form-select">
+                    <option value="" selected>All</option>
+                    {% for user in users %}
+                        <option value="{{ user.username }}">{{ user.username }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
             <input type="hidden" id="parentOrderID" name="ParentOrderID" value="{{ ParentOrderID }}">
             <button type="submit" class="btn btn-primary">Add Production Order</button>
             <a href="{{ url_for('production.view_ProductionOrder') }}" class="btn btn-secondary">Go Back</a>
