--- a/app/templates/datatable_setup.html
+++ b/app/templates/datatable_setup.html
@@ -1,6 +1,4 @@
 <!-- DataTables e Bootstrap -->
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
 
@@ -11,10 +9,7 @@
             "ordering": true,
             "searching": true,
             "info": true,
-            "pageLength": 100,
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/1.13.4/i18n/Italian.json"
-            }
+            "pageLength": 100
         });
     });
 </script>
