--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container-fluid text-center">
     <div class="row">
-        <div class="col">
+        <div class="col-12 col-lg-6">
             <h3 class="mb-3">Missing parts on Current Orders</h3>
 
             {% for order_id, items in grouped_orders_ongoing.items() %}
@@ -60,8 +60,7 @@
             {% endfor %}
         </div>
 
-
-        <div class="col">
+        <div class="col-12 col-lg-6">
             <h3 class="mb-3">Missing parts on Planned Orders</h3>
 
             {% for order_product_code, items in grouped_orders_planned.items() %}
